project-demo/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "8501"
      port: 8501
      targetPort: 8501
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
