project-demo/project-demo-projectnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: project-demo-projectnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/project-demo-projectnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/project-demo-projectnet: "true"
